add getting started

--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -87,6 +87,23 @@ val response = account.create("email@example.com", "password")
 val json = response.body?.string()</code></pre>
 </div>
 
+<h2><a href="/docs/getting-started-for-android#listenToChanges" id="listenToChanges">Listen to changes</a></h2>
+
+<p>If you want to listen to changes in realtime from Appwrite, you can subscribe to a variety of channels and receive updates within milliseconds. Full documentation for Realtime can be found <a href="/docs/realtime">here</a>.</p>
+
+<div class="ide" data-lang="android" data-lang-label="Android SDK">
+  <pre class="line-numbers"><code class="prism language-kotlin" data-prism>// Subscribe to files channel
+val realtime = Realtime(client)
+
+realtime.subscribe("files", callback = { response ->
+    if(response.event === 'storage.files.create') {
+        // Log when a new file is uploaded
+        print(response.payload.toString());
+    }
+})
+</code></pre>
+</div>
+
 <h2><a href="/docs/getting-started-for-android#fullExample" id="fullExample">Full Example</a></h2>
 <div class="ide" data-lang="android" data-lang-label="Android SDK">
                     <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
@@ -98,9 +115,20 @@ val client = Client(context)
   .setKey("919c2d18fb5d4...a2ae413da83346ad2") // Your secret API key
   .setSelfSigned(true) // For self signed certificates only use for development
 
+// Register User
 val account = Account(client)
 val response = account.create("email@example.com", "password")
-val json = response.body?.string()</code></pre>
+val json = response.body?.string()
+
+// Subscribe to files channel
+val realtime = Realtime(client)
+
+realtime.subscribe("files", callback = { response ->
+    if(response.event === 'storage.files.create') {
+        // Log when a new file is uploaded
+        print(response.payload.toString());
+    }
+})</code></pre>
 </div>
 
 <h2><a href="/docs/getting-started-for-android#nextSteps" id="nextSteps">Next Steps</a></h2>
