--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -85,11 +85,26 @@ appwrite
                     <pre class="line-numbers"><code class="prism language-javascript" data-prism>// Register User
 appwrite
     .account.create('me@example.com', 'password', 'Jane Doe')
-        .then(function (response) {
+        .then(response => {
             console.log(response);
-        }, function (error) {
+        }, error => {
             console.log(error);
         });
+</code></pre>
+</div>
+
+<h2><a href="/docs/getting-started-for-web#listenToChanges" id="listenToChanges">Listen to changes</a></h2>
+
+<p>If you want to listen to changes in realtime from Appwrite, you can subscribe to a variety of channels and receive updates within milliseconds. Full documentation for Realtime can be found <a href="/docs/realtime">here</a>.</p>
+
+<div class="ide" data-lang="javascript" data-lang-label="Web SDK">
+                    <pre class="line-numbers"><code class="prism language-javascript" data-prism>// Subscribe to files channel
+appwrite.subscribe('files', response => {
+    if(response.event === 'storage.files.create') {
+        // Log when a new file is uploaded
+        console.log(response.payload);
+    }
+});
 </code></pre>
 </div>
 
@@ -104,11 +119,19 @@ appwrite
 // Register User
 appwrite
     .account.create('me@example.com', 'password', 'Jane Doe')
-        .then(function (response) {
+        .then(response => {
             console.log(response);
-        }, function (error) {
+        }, error => {
             console.log(error);
         });
+
+// Subscribe to files channel
+appwrite.subscribe('files', response => {
+    if(response.event === 'storage.files.create') {
+        // Log when a new file is uploaded
+        console.log(response.payload);
+    }
+});
 </code></pre>
 </div>
 
