--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -139,7 +139,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
     <li>
         <h3>Web</h3>
         <div class="ide margin-bottom" data-lang="javascript" data-lang-label="Web SDK">
-            <pre class="line-numbers"><code class="prism language-javascript" data-prism>let sdk = new Appwrite();
+            <pre class="line-numbers"><code class="prism language-javascript" data-prism>const sdk = new Appwrite();
 
 sdk
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
