--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -102,7 +102,7 @@
 <p>In the following example, we are creating a document that can be read by everyone and only be edited, or deleted by a user with a UID <span class="tag">user:5c1f88b42259e</span>.</p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
-    <pre class="line-numbers"><code class="prism language-javascript" data-prism>let sdk = new Appwrite();
+    <pre class="line-numbers"><code class="prism language-javascript" data-prism>const sdk = new Appwrite();
 
 sdk
     .setProject('')
@@ -129,7 +129,7 @@ promise.then(function (response) {
 <p>In the following example, we are creating a document that can be read-only by members of <span class="tag">team:5c1f88b87435e</span> and can only be edited, or deleted by members of the same team that possesses the role <span class="tag">owner</span>.</p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
-    <pre class="line-numbers"><code class="prism language-javascript" data-prism>let sdk = new Appwrite();
+    <pre class="line-numbers"><code class="prism language-javascript" data-prism>const sdk = new Appwrite();
 
 sdk
     .setProject('')
