replace kotlin with android

--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -38,8 +38,8 @@ realtime.subscribe(channel).stream.listen(callback)
         </div>
     </li>
     <li>
-        <h3>Kotlin</h3>
-        <div class="ide margin-bottom" data-lang="kotlin" data-lang-label="Kotlin SDK">
+        <h3>Android</h3>
+        <div class="ide margin-bottom" data-lang="android" data-lang-label="Android SDK">
             <pre class="line-numbers"><code class="prism language-kotlin" data-prism>val client = Client()
 val realtime = Realtime(client)
 
@@ -94,8 +94,8 @@ subscription.stream.listen((response) {
         </div>
     </li>
     <li>
-        <h3>Kotlin</h3>
-        <div class="ide margin-bottom" data-lang="kotlin" data-lang-label="Kotlin SDK">
+        <h3>Android</h3>
+        <div class="ide margin-bottom" data-lang="android" data-lang-label="Android SDK">
             <pre class="line-numbers"><code class="prism language-kotlin" data-prism>val client = Client()
 val realtime = Realtime(client)
 
@@ -139,8 +139,8 @@ subscription.stream.listen((response) {
         </div>
     </li>
     <li>
-        <h3>Kotlin</h3>
-        <div class="ide margin-bottom" data-lang="kotlin" data-lang-label="Kotlin SDK">
+        <h3>Android</h3>
+        <div class="ide margin-bottom" data-lang="android" data-lang-label="Android SDK">
             <pre class="line-numbers"><code class="prism language-kotlin" data-prism>val client = Client()
 val realtime = Realtime(client)
 
@@ -189,8 +189,8 @@ subscription.close();</code></pre>
         </div>
     </li>
     <li>
-        <h3>Kotlin</h3>
-        <div class="ide margin-bottom" data-lang="kotlin" data-lang-label="Kotlin SDK">
+        <h3>Android</h3>
+        <div class="ide margin-bottom" data-lang="android" data-lang-label="Android SDK">
             <pre class="line-numbers"><code class="prism language-kotlin" data-prism>val client = Client()
 val realtime = Realtime(client)
 
@@ -328,8 +328,8 @@ client.setEndpointRealtime('[ENDPOINT]');</code></pre>
         </div>
     </li>
     <li>
-        <h3>Kotlin</h3>
-        <div class="ide margin-bottom" data-lang="kotlin" data-lang-label="Kotlin SDK">
+        <h3>Android</h3>
+        <div class="ide margin-bottom" data-lang="android" data-lang-label="Android SDK">
             <pre class="line-numbers"><code class="prism language-kotlin" data-prism>val client = Client()
 client.setEndpointRealtime('[ENDPOINT]')</code></pre>
         </div>
