--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -54,7 +54,7 @@ realtime.subscribe(channels, callback)</code></pre>
 
 <p>All possible events can be found <a href="/docs/webhooks#events">here</a>.</p>
 
-<div class="notice calm margin-top-large margin-bottom-large">
+<div class="notice margin-top-large margin-bottom-large">
     <h3>Permissions</h3>
     <p>All subscriptions are secured by the <a href="/docs/permissions">permissions</a> offered by Appwrite, meaning a user will only receive updates to resources to which he has read permission.</p>
     <p>Using a wildcard <span class="tag">*</span> on read permissions will allow any client to receive updates.</p>
