--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -2,16 +2,16 @@
 $channels = [
     'account' => 'All account related events (session create, name update...)',
     'collections' =>  'Any create/update/delete events for collections',
-    'collections.[ID]' => 'Any create/update/delete events to a given collection',
+    'collections.[ID]' => 'Any update/delete events to a given collection',
     'collections.[ID].documents' => 'Any create/update/delete events to any document in a collection',
     'documents' => 'Any create/update/delete events to any document',
-    'documents.[ID]' => 'Any create/update/delete events to a given document',
+    'documents.[ID]' => 'Any update/delete events to a given document',
     'files' => 'Any create/update/delete events to any file',
-    'files.[ID]' => 'Any create/update/delete events to a given file',
+    'files.[ID]' => 'Any update/delete events to a given file',
     'teams' => 'Any create/update/delete events to a any team',
-    'teams.[ID]' => 'Any create/update/delete events to a given team',
+    'teams.[ID]' => 'Any update/delete events to a given team',
     'memberships' => 'Any create/update/delete events to a any membership',
-    'memberships.[ID]' => 'Any create/update/delete events to a given membership',
+    'memberships.[ID]' => 'Any update/delete events to a given membership',
     'executions' => 'Any update to executions',
     'executions.[ID]' => 'Any update to a given execution',
     'functions.[ID]' => 'Any execution event to a given function'
