--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -116,7 +116,7 @@ Client client = Client();
 client
     .setEndpoint('https://localhost/v1') // Your Appwrite Endpoint
     .setProject('5e8cf4f46b5e8') // Your project ID
-    .setSelfSigned() // Remove in production
+    .setSelfSigned(true) // For self signed certificates, only use for development
 ;
 </code></pre>
 </div>
@@ -169,7 +169,7 @@ Client client = Client();
 client
     .setEndpoint('https://localhost/v1') // Your Appwrite Endpoint
     .setProject('5e8cf4f46b5e8') // Your project ID
-    .setSelfSigned() // Remove in production
+    .setSelfSigned(true) // For self signed certificates, only use for development
 ;
 
 // Register User
