--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -44,7 +44,7 @@ sdk.subscribe(channel, callback);</code></pre>
 client
     .setEndpoint('https://localhost/v1') // Your Appwrite Endpoint
     .setProject('5e8cf4f46b5e8') // Your project ID
-    .setSelfSigned(true) For self signed certificates, only use for development
+    .setSelfSigned(true) // For self signed certificates, only use for development
 ;
 
 final realtime = Realtime(client);
