Fixed the Cron Configuration for the 5 minutes interval

--- a/app/views/docs/tasks.phtml
+++ b/app/views/docs/tasks.phtml
@@ -17,7 +17,7 @@
 <p class="note margin-top-small">If you want to run your script on 5 minutes interval, configure like below.</p>
 
 <div class="ide margin-top-small">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>5 * * * *</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>*/5 * * * *</code></pre>
 </div>
 
 <b>Schedule task to execute at 2am daily</b>
