--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -37,16 +37,21 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 ```
 
 <div class="ide" data-lang="html" data-lang-label="XML">
-    <pre class="line-numbers"><code class="prism language-xml" data-prism><?php echo $this->escape('<!-- Add this inside the `<application>` tag, along side the existing `<activity>` tags -->
-<activity android:name="com.linusu.flutter_web_auth.CallbackActivity" >
-  <intent-filter android:label="flutter_web_auth">
-    <action android:name="android.intent.action.VIEW" />
-    <category android:name="android.intent.category.DEFAULT" />
-    <category android:name="android.intent.category.BROWSABLE" />
-    <data android:scheme="appwrite-callback-[PROJECT_ID]" />
-  </intent-filter>
-</activity>
-'); ?>
+    <pre class="line-numbers"><code class="prism language-xml" data-prism><?php echo $this->escape('<manifest ...>
+  ...
+  <application ...>
+    ...
+    <!-- Add this inside the `<application>` tag, along side the existing `<activity>` tags -->
+    <activity android:name="com.linusu.flutter_web_auth.CallbackActivity" >
+      <intent-filter android:label="flutter_web_auth">
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="appwrite-callback-[PROJECT_ID]" />
+      </intent-filter>
+    </activity>
+  </application>
+</manifest>'); ?>
 </code></pre>
 </div>
 
