--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -41,7 +41,7 @@ $cols = [
                         </ul>
                     </li>
                     <li><a href="/docs/getting-started-for-web">Appwrite for Web</a></li>
-                    <li><a href="/docs/getting-started-for-flutter">Appwrite for Flutter (beta)</a></li>
+                    <li><a href="/docs/getting-started-for-flutter">Appwrite for Flutter</a></li>
                     <li><a href="/docs/getting-started-for-android">Appwrite for Android (beta)</a></li>
                     <li><a href="/docs/getting-started-for-server">Appwrite for Server</a></li>
                     <li><a href="/docs/command-line">Appwrite CLI</a></li>
