--- a/app/views/docs/rate-limits.phtml
+++ b/app/views/docs/rate-limits.phtml
@@ -1,4 +1,4 @@
-<p>Some of Appwrite's API endpoints have a rate limit to avoid abuse or brute-force attack against Appwrite's REST API. Each Appwrite route documentation has information about any rate limits that might apply to him.</p>
+<p>Some of Appwrite's API endpoints have a rate limit to avoid abuse or brute-force attack against Appwrite's REST API. Each Appwrite route documentation has information about any rate limits that might apply to it.</p>
 
 <p>You can check the returned HTTP headers of any API request to see your current rate limit status:</p>
 
@@ -61,7 +61,7 @@ X-RateLimit-Reset: 1377013266
 
 <h2><a href="/docs/rate-limits#abuse" id="abuse">Service Abuse</a></h2>
 
-<p>To protect the quality of service from Appwrite, additional rate limits may apply to some actions. For example, rapidly creating content, polling aggressively instead of using webhooks, making API calls with a high concurrency, or repeatedly requesting data that is computationally expensive may result in abuse rate limiting.</p>
+<p>To protect the quality of service from Appwrite, additional rate limits may apply to some actions. For example, rapidly creating content, polling aggressively instead of using webhooks, making API calls with a high concurrency, or repeatedly requesting data that is computationally expensive may result in agressive rate limiting, due to abuse of services.</p>
 
 <p>It is not intended for this rate limit to interfere with any legitimate use of the API. Your normal rate limits should be the only limit you target.</p>
 
