Possible gramatical error corrected
Given sentence at line 95 - Each rule has a validation type. This data types are abstracted to help you get started as quickly as possible.

Corrected sentence - Each rule has a validation type. These data types are abstracted to help you get started as quickly as possible.

--- a/app/views/docs/rules.phtml
+++ b/app/views/docs/rules.phtml
@@ -92,7 +92,7 @@ $markdown->setSafeMode(true);
     <a href="/docs/rules#types" id="types">Validation Types</a>
 </h2>
 
-<p>Each rule has a validation type. This data types are abstracted to help you get started as quickly as possible.</p>
+<p>Each rule has a validation type. These data types are abstracted to help you get started as quickly as possible.</p>
 
 <table class="vertical full margin-bottom-large">
     <thead>
