--- a/app/views/docs/email-delivery.phtml
+++ b/app/views/docs/email-delivery.phtml
@@ -18,6 +18,8 @@
 
 <p><b>_APP_SMTP_PASSWORD</b> - SMTP server user password. Empty by default.</p>
 
+<p><b>_APP_SYSTEM_EMAIL_ADDRESS</b> - Email address used for sending the emails. "team@appwrite.io" by default.</p>
+
 <p>Here's a sample configuration if you're using SendGrid as your SMTP provider. </p> 
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
