Added new status code

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -14,11 +14,19 @@
             <td data-title="Text: ">OK</td>
             <td data-title="Description: ">Success!</td>
         </tr>
+
         <tr>
             <td data-title="Code: ">204</td>
             <td data-title="Text: ">No Content</td>
             <td data-title="Description: ">The server has successfully fulfilled the request and that there is no additional content to send in the response payload body. This status will usually return on successful delete operations.</td>
         </tr>
+
+        <tr>
+            <td data-title="Code: ">301</td>
+            <td data-title="Text: ">Moved Permanently</td>
+            <td data-title="Description: ">The URL of the requested resource has been changed permanently. The new URL is given in the response.</td>
+        </tr>
+
         <tr>
             <td data-title="Code: ">304</td>
             <td data-title="Text: ">Not Modified</td>
